// Copyright 2024 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
//
// excerpt from google3/devtools/srcfs/daemon/cog/cog_local_rpc_service.proto#28

edition = "2023";

package devtools_srcfs;

option go_package = "go.chromium.org/infra/build/siso/toolsupport/cogutil/proto";
option features.utf8_validation = NONE;

service CogLocalRpcService {
  rpc BuildfsInsert(BuildfsInsertRequest) returns (BuildfsInsertResponse) {}
}

message BuildfsInsertion {
  string path = 1;

  // SHA256 of the file content.
  string digest = 2;

  // Size of the file.
  int64 size = 3;

  enum Mode {
    option features.enum_type = CLOSED;
    FILE = 0;
    EXECUTABLE_FILE = 1;
  }

  Mode mode = 4;
}

message BuildfsInsertRequest {
  string reapi_server = 1;
  string reapi_instance = 2;
  repeated BuildfsInsertion insertions = 3;
}

message BuildfsInsertResponse {}
